# hitch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-17-hatchway-design.md  2026-03-17-hatchway.md  2026-03-17-hitch-github-workflows-design.md  2026-03-17-hitch-github-workflows.md  2026-03-17-hitch-port-mode-design.md  2026-03-17-hitch-port-mode.md  2026-03-17-hitch-tunnel-confirmation-design.md  2026-03-17-hitch-tunnel-confirmation.md
scripts/: install.sh
src/: cli.rs  config.rs  confirm.rs  detect.rs  lib.rs  main.rs  origin.rs  runtime.rs  status.rs  tunnel.rs
