[package]
name = "hitch"
version = "0.1.0"
edition = "2024"
authors = ["EngoDev"]
license = "MIT"
readme = "README.md"
description = "CLI tool for easily logging into accounts using aouth2 from a remote machine."

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = "3.5.0"
libc = "0.2.183"
portable-pty = "0.9.0"
regex = "1.12.2"
url = "2.5.7"
