[package]
name = "hitch"
version = "0.1.1"
edition = "2024"
authors = ["EngoDev"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
description = "CLI tool for easily logging into accounts that require a browser from a remote machine."

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = "3.5.0"
inquire = "0.7.5"
libc = "0.2.183"
portable-pty = "0.9.0"
regex = "1.12.2"
url = "2.5.7"
